Fix form spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,7 +80,7 @@ form {
   align-items: flex-start;
   background-color: white;
   padding: 1em;
-  gap:.1em;
+  gap:1em;
   border-radius: 10px;
 }
 form label {
